<resources>
    <string name="app_name">HisignEnvidence</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="str_phone">手机号码</string>
    <string name="str_password">登录密码</string>
    <string name="str_login">登录</string>
    <string name="str_forget_password">忘记密码</string>
    <string name="str_registor">注册账号</string>
    <string name="str_copyright">Copyright@jaydenxiao2017</string>
    <string name="str_wrong_phone_tip">手机号码错误</string>
    <string name="str_wrong_pwd_tip">密码必须大于6位</string>
    <string name="str_name_with_title">姓名：%1$s</string>
    <string name="str_code_with_title">编号：%1$s</string>
    <string name="str_setting_title">个人中心</string>
</resources>
